--- a/src/components/Feed.css
+++ b/src/components/Feed.css
@@ -1,4 +1,4 @@
-.Cards {
+.Feed {
   width: 500px;
   border: 1px solid #dbdbdb;
   border-radius: 5px;
@@ -6,8 +6,8 @@
   margin: 30px;
 }
 
-.card_header,
-.card_menus {
+.feed_header,
+.feed_menus {
   width: 100%;
   height: 50px;
   padding: 10px;
@@ -29,21 +29,21 @@
   border-radius: 50px;
 }
 
-.card_likes {
+.feed_likes {
   width: 100%;
   padding: 10px;
 }
 .icons {
   width: 20px;
 }
-.card_comments {
+.feed_comments {
   width: 100%;
   padding: 10px;
   display: flex;
   flex-direction: column;
 }
 
-.card_input_comment {
+.feed_input_comment {
   border-top: 1px solid #dbdbdb;
   height: 50px;
   padding: 10px;
@@ -52,7 +52,7 @@
   align-items: center;
 }
 
-.card_input_comment input {
+.feed_input_comment input {
   width: 90%;
 }
 
@@ -61,4 +61,17 @@
   font-size: 16px;
   background-color: transparent;
   cursor: pointer;
+}
+
+@media (max-width: 800px) {
+  .Feed {
+    width: 350px;
+  }
+  .comment_btn {
+    font-size: 12px;
+  }
+
+  .feed_input_comment input {
+    width: 230px;
+  }
 }
