--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -43,12 +43,44 @@ img {
   padding: 10px;
 }
 
+/* input:focus {
+  border: 1px solid #e5e5e5;
+  border-radius: 5px;
+  background-color: #fafafa;
+  width: 300px;
+  height: 40px;
+  margin: 5px;
+  padding: 10px;
+
+  border: 2px solid red;
+}
+
+input:blur {
+  border: 1px solid #e5e5e5;
+  border-radius: 5px;
+  background-color: #fafafa;
+  width: 300px;
+  height: 40px;
+  margin: 5px;
+  padding: 10px;
+} */
+
 .btn_login {
   width: 300px;
   height: 40px;
   margin: 10px 5px;
   padding: 10px;
   background-color: #c3e0fa;
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.valid_btn_login {
+  width: 300px;
+  height: 40px;
+  margin: 10px 5px;
+  padding: 10px;
+  background-color: #1e4371;
   color: white;
   border-radius: 5px;
   cursor: pointer;
