--- a/src/components/Feed.css
+++ b/src/components/Feed.css
@@ -10,7 +10,7 @@
 .feed_menus {
   width: 100%;
   height: 50px;
-  padding: 10px;
+  padding: 0 10px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -20,13 +20,20 @@
   display: flex;
   align-items: center;
 }
-
+.profile_name {
+  font-weight: bold;
+  margin-right: 10px;
+}
 .profile_img {
   width: 30px;
   height: 30px;
   margin-right: 10px;
   background-color: #dbdbdb;
   border-radius: 50px;
+}
+
+.feed_content {
+  padding: 0 10px;
 }
 
 .feed_likes {
