--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -16,10 +16,11 @@
   align-items: center;
   justify-content: space-between;
 }
-.logo_img {
-  width: 300px;
+.logo_img_wrapper {
+  width: 150px;
+  height: 50px;
 }
-img {
+.logo_img {
   width: 150px;
   height: 50px;
   object-fit: contain;
@@ -47,6 +48,30 @@ nav ul {
   justify-content: space-evenly;
   align-content: center;
   list-style: none;
+}
+
+nav ul li {
+  align-self: center;
+}
+
+.icon {
+  width: 25px;
+  cursor: pointer;
+}
+
+.button {
+  width: 65px;
+  height: 35px;
+  margin: 5px;
+  padding: 10px;
+  border-radius: 8px;
+  background-color: #efefef;
+  font-size: 14px;
+  cursor: pointer;
+}
+
+.button:hover {
+  background-color: #dbdbdb;
 }
 
 @media (max-width: 800px) {
