--- a/src/components/Feed/feed.module.scss
+++ b/src/components/Feed/feed.module.scss
@@ -6,8 +6,7 @@
   margin: 30px;
 }
 
-.feed_header,
-.feed_menus {
+.feed_header {
   width: 100%;
   height: 50px;
   padding: 0 10px;
@@ -20,7 +19,7 @@
   display: flex;
   align-items: center;
 }
-.profile_name {
+.name {
   font-weight: bold;
   margin-right: 10px;
 }
@@ -32,8 +31,64 @@
   border-radius: 50px;
 }
 
+.image {
+  width: 499px;
+  height: auto;
+  object-fit: cover;
+}
+
+.contents {
+  padding: 0 10px;
+}
+
+.content_btn {
+  background-color: transparent;
+  color: #929292;
+  cursor: pointer;
+}
+
+.icons_wrapper {
+  margin: 5px 0;
+  height: 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.icons {
+  height: 30px;
+  width: 80px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.icon {
+  width: 20px;
+  cursor: pointer;
+}
+
+.bookmark {
+  width: 15px;
+  cursor: pointer;
+}
+
+.likes {
+  padding: 5px 0;
+  font-size: 14px;
+}
+
+.content {
+  padding: 5px 0;
+  margin-top: 5px;
+}
+
 @media (max-width: 800px) {
   .Feed {
     width: 350px;
+  }
+  .image {
+    width: 349px;
+    height: auto;
+    object-fit: cover;
   }
 }
